Last version before sumbission

--- a/configs/extracted/G335.579-0.272_alma3.cfg
+++ b/configs/extracted/G335.579-0.272_alma3.cfg
@@ -5,6 +5,7 @@ dec = -48d43m51.2159s
 frame = icrs
 distance = 3.25 kpc
 vlsr = -53.1 km/s
+vsys_fit = -48.8 km/s
 radius = 0.0367 arcsec
 sourcedata = ../source_data
 subcubes = ../results/${name}/c5c8/per_hot_core/
