Add alamae option

--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig2.21.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig2.21.cfg
@@ -48,6 +48,7 @@ loc = 0 0
 source = G35.20-0.74_N
 label =  G35.20-0.74 N ALMAe${almae} PA=${paval}${deg}
 alma = 1
+almae = 1
 paval = -10
 pvmap = ${results}/${source}_alma1_rotation.CH3OH_spw0.ra284.55397_dec1.67705.PA${paval}.fits
 xlim = -0.52 0.52 arcsec
@@ -113,6 +114,7 @@ loc = 0 1
 source = G35.20-0.74_N
 label =  G35.20-0.74 N ALMAe${almae} PA=${paval}${deg}
 alma = 1
+almae = 1
 paval = 80
 pvmap = ${results}/${source}_alma1_rotation.CH3OH_spw0.ra284.55397_dec1.67705.PA${paval}.fits
 xlim = -0.52 0.52 arcsec
