--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig2.25.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig2.25.cfg
@@ -30,6 +30,7 @@ xticks_fmt = {x:.1f}
 yticks_fmt = {x:.0f}
 inverty = true
 ticks_color = w
+almae = ${alma}
 label = ${source} ALMAe${almae} PA=${paval}${deg}
 label_position = 0.03 0.92
 vlines = 0 arcsec
