Change moments plot grid

--- a/configs/plots/papers/group_moments.2.cfg
+++ b/configs/plots/papers/group_moments.2.cfg
@@ -1,6 +1,6 @@
 [DEFAULT]
 ncols = 3
-nrows = 4
+nrows = 3
 sharex = false 
 sharey = false
 styles = maps vik
@@ -33,8 +33,8 @@ contour_colors = #7f7f7f
 contour_stretch = log
 negative_nsigma = 3
 label_position = 0.04 0.92
-enumerate_shift = 12
-enumerate_modulus = 12
+enumerate_shift = 9
+enumerate_modulus = 9
 # Units
 ignore_units = false
 labelpad = 5
@@ -61,8 +61,93 @@ arrows_linewidth = 3
 basedir = ../
 contdir = ${basedir}/source_data/continuum
 
-[G333.46_alma1_moment1]
+[G333.12_alma1_moment1]
 loc = 0 0
+source = G333.12-0.56
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
+image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width34.subcube.moment1.fits
+shift_data = 58.47 km/s
+label = ${source} ALMAe1 CH$$_3$$OH
+# Range
+vmin = -6 km/s
+vmax = 6 km/s
+# Recenter
+center = 16h21m35.37589s -50d40m56.6044s icrs
+# Artists
+scale = 16h21m35.334s -50d40m57.00s icrs
+scale_distance = 3.3 kpc
+arrows = ${center}, ${center}
+arrows_color = #f93dff, #02b829
+arrows_ls = -, --
+arrows_style = ->, -
+arrows_pa = 135 deg, 40 deg
+
+[G333.12_alma2_moment1]
+loc = 0 1
+source = G333.12-0.56
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma2_moments
+image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
+shift_data = 54.1 km/s
+label = ${source} ALMAe6 CH$$_3$$CN
+# Range
+vmin = -6 km/s
+vmax = 6 km/s
+# Recenter
+center = 16h21m36.25475s -50d40m47.2340s icrs
+radius = 0.35 arcsec
+# Artists
+scale = 16h21m36.221s -50d40m47.55s icrs
+scale_distance = 3.3 kpc
+arrows = ${center}, ${center}
+arrows_color = #f93dff, #02b829
+arrows_ls = -, --
+arrows_style = ->, -
+arrows_pa = 90 deg, -35 deg
+
+[G333.12_continuum]
+loc = 0 0, 0 1
+contour = ${contdir}/G333.12-0.56.config8.selfcal.cont_avg.robust0.5.image.fits
+ignore_units = true
+beam_color = ${contour_colors}
+beam_zorder = 5
+
+[G333.23_alma3_moment1]
+loc = 0 2
+source = G333.23-0.06
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma3_moments
+image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
+shift_data = 87.04 km/s
+#label = ${source} ALMA3 CH$$_3$$CN
+label = ${source} CH$$_3$$CN
+# Range
+vmin = -4 km/s
+vmax = 4 km/s
+# Recenter
+center = 16h19m50.88363s -50d15m10.5272s icrs
+radius = 0.4 arcsec
+# Artists
+markers = ${center}, 16h19m50.87824s -50d15m10.6063s icrs
+markers_marker = x, x
+scale = 16h19m50.84s -50d15m10.88s icrs
+scale_distance = 5.2 kpc
+arrows = ${center}, 16h19m50.87824s -50d15m10.6063s icrs, ${center}, 16h19m50.87824s -50d15m10.6063s icrs
+arrows_length = 0.5, 0.6, 0.5, 0.5
+arrows_color = #02b829, #02b829, #f93dff, #f93dff
+arrows_ls = --, --, -, -
+arrows_style = -, -, -> , ->
+arrows_pa = 133 deg, 221 deg, 220 deg, 125 deg
+texts = 16h19m50.905s -50d15m10.53s icrs, 16h19m50.875s -50d15m10.61s icrs
+texts_text = ALMAe5, ALMAe14
+
+[G333.23_alma3_continuum]
+loc = 0 2
+contour = ${contdir}/G333.23-0.06.config8.cont_avg.selfcal_0.5_hogbom.image.fits
+ignore_units = true
+beam_color = ${contour_colors}
+beam_zorder = 5
+
+[G333.46_alma1_moment1]
+loc = 1 0
 source = G333.46-0.16
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
 #image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width30.subcube.moment1.fits
@@ -85,7 +170,7 @@ arrows_style = ->, -
 arrows_pa = 130 deg, 100 deg
 
 [G333.46_alma7_moment1]
-loc = 0 1
+loc = 1 1
 source = G333.46-0.16
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma7_moments
 image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
@@ -105,15 +190,15 @@ arrows_ls = -, --
 arrows_style = ->, -
 arrows_pa = 130 deg, 209 deg
 
-[G333.46_alma7_continuum]
-loc = 0 0, 0 1
+[G333.46_continuum]
+loc = 1 0, 1 1
 contour = ${contdir}/G333.46-0.16.config8.cont_avg.selfcal_0.5_hogbom.image.fits
 ignore_units = true
 beam_color = ${contour_colors}
 beam_zorder = 5
 
 [G335.579_alma1_moment1]
-loc = 0 2
+loc = 1 2
 source = G335.579-0.272
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
 image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width40.subcube.moment1.fits
@@ -134,7 +219,9 @@ arrows_style = ->, -
 arrows_pa = 150 deg, 240 deg
 
 [G335.579_alma3_moment1]
-loc = 1 0
+loc = 2 0
+set_xlabel = true
+set_ylabel = true
 source = G335.579-0.272
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma3_moments
 image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width40.subcube.moment1.fits
@@ -155,14 +242,14 @@ arrows_style = ->, -
 arrows_pa = 202 deg, -72 deg
 
 [G335.579_continuum]
-loc = 0 2, 1 0
+loc = 1 2, 2 0
 contour = ${contdir}/G335.579-0.272.config8.cont_avg.selfcal_0.5_hogbom.image.fits
 ignore_units = true
 beam_color = ${contour_colors}
 beam_zorder = 5
 
 [G335.78_alma1_moment1]
-loc = 1 1
+loc = 2 1
 source = G335.78+0.17
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
 image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width44.subcube.moment1.fits
@@ -183,7 +270,7 @@ arrows_style = ->, -
 arrows_pa = 215 deg, -30 deg
 
 [G335.78_alma2_moment1]
-loc = 1 2
+loc = 2 2
 source = G335.78+0.17
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma2_moments
 image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width40.subcube.moment1.fits
@@ -201,168 +288,8 @@ scale_distance = 3.2 kpc
 arrows_pa = 65 deg
 
 [G335.78_continuum]
-loc = 1 1, 1 2
+loc = 2 1, 2 2
 contour = ${contdir}/G335.78+0.17.config8.selfcal.cont_avg.robust0.5.image.fits
-ignore_units = true
-beam_color = ${contour_colors}
-beam_zorder = 5
-
-[G336_alma1_moment1]
-loc = 2 0
-source = G336.01-0.82
-results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
-image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width30.subcube.moment1.fits
-shift_data = 47.2 km/s
-label = ${source} ALMAe2 CH$$_3$$OH
-# Range
-vmin = -6 km/s
-vmax = 6 km/s
-# Recenter
-center = 16h35m09.25854s -48d46m47.6623s icrs
-# Artists
-scale = 16h35m09.218s -48d46m48.1s icrs
-scale_distance = 3.1 kpc
-arrows = ${center}, ${center}
-arrows_color = #f93dff, #02b829
-arrows_ls = -, --
-arrows_style = ->, -
-arrows_pa = 125 deg, 205 deg
-
-[G336_continuum]
-loc = 2 0
-contour = ${contdir}/G336.01-0.82.config8.cont_avg.selfcal_0.5_hogbom.image.fits
-ignore_units = true
-beam_color = ${contour_colors}
-beam_zorder = 5
-
-[G34_alma1_moment1]
-loc = 2 1
-source = G34.43+0.24
-results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
-image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width30.subcube.moment1.fits
-shift_data = -58.44 km/s
-label = ${source} ALMAe2 CH$$_3$$OH
-# Range
-vmin = -5 km/s
-vmax = 5 km/s
-# Recenter
-center = 18h53m18.00684s +01d25m25.4228s icrs
-# Artists
-scale = 18h53m17.98s +01d25m25.0s icrs
-scale_distance = 3.03 kpc
-arrows = ${center}, ${center}
-arrows_color = #f93dff, #02b829
-arrows_ls = -, --
-arrows_style = ->, -
-arrows_pa = 280 deg, 200 deg
-
-[G34_continuum]
-loc = 2 1
-contour = ${contdir}/G34.43+0.24.config8.cont_avg.selfcal_0.5_hogbom.image.fits
-ignore_units = true
-beam_color = ${contour_colors}
-beam_zorder = 5
-
-[G343_alma1_moment1]
-loc = 2 2
-source = G343.12-0.06
-results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
-image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width20.subcube.moment1.fits
-shift_data = 33.71 km/s
-label = ${source} ALMAe1 CH$$_3$$OH
-# Range
-vmin = -5 km/s
-vmax = 5 km/s
-# Recenter
-center = 16h58m17.20735s -42d52m07.4161s icrs
-# Artists
-scale = 16h58m17.17s -42d52m07.85s icrs
-scale_distance = 2.9 kpc
-arrows = ${center}, ${center}
-arrows_color = #f93dff, #02b829
-arrows_ls = -, --
-arrows_style = ->, -
-arrows_pa = 230 deg, 135 deg
-
-[G343_continuum]
-loc = 2 2
-contour = ${contdir}/IRAS165474247_G343.12-0.06.config8.cont_avg.selfcal_0.5_hogbom.image.fits
-ignore_units = true
-beam_color = ${contour_colors}
-beam_zorder = 5
-
-[G35.03_alma1_moment1]
-loc = 3 0
-set_xlabel = true
-set_ylabel = true
-source = G35.03+0.35_A
-results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
-image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
-shift_data = -45.94 km/s
-label = G35.03+0.35 A ALMAe1 CH$$_3$$CN
-# Range
-vmin = -8 km/s
-vmax = 8 km/s
-# Recenter
-center = 18h54m00.65099s +02d01m19.3410s icrs
-# Artists
-scale = 18h54m00.62s +02d01m18.9s icrs
-scale_distance = 2.32 kpc
-arrows = ${center}, ${center}
-arrows_color = #f93dff, #02b829
-arrows_ls = -, --
-arrows_style = ->, -
-arrows_pa = 310 deg, 110 deg 
-
-[G35.03_continuum]
-loc = 3 0
-contour = ${contdir}/G35.03+0.35_A.config8.cont_avg.selfcal_0.5_hogbom.image.fits
-ignore_units = true
-beam_color = ${contour_colors}
-beam_zorder = 5
-
-[G35.13_alma1_moment1]
-loc = 3 1
-source = G35.13-0.74
-results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
-image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
-shift_data = -35.93 km/s
-label = ${source} ALMAe1 CH$$_3$$CN
-# Range
-vmin = -8 km/s
-vmax = 8 km/s
-# Recenter
-center = 18h58m06.13626s +01d37m07.4306s icrs
-# Artists
-scale = 18h58m06.11s +01d37m07.0s icrs
-scale_distance = 2.2 kpc
-arrows = ${center}, ${center}
-arrows_color = #f93dff, #02b829
-arrows_ls = -, --
-arrows_style = ->, -
-arrows_pa = 45 deg, 145 deg
-
-[G35.13_alma2_moment1]
-loc = 3 2
-source = G35.13-0.74
-results = ${basedir}/results/${source}/c5c8/per_hot_core/alma2_moments
-image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
-shift_data = -34.39 km/s
-label = ${source} ALMAe2 CH$$_3$$CN
-# Range
-vmin = -5 km/s
-vmax = 5 km/s
-# Recenter
-center = 18h58m06.16874s +01d37m08.1602s icrs
-radius = 0.3 arcsec
-# Artists
-scale = 18h58m06.15s +01d37m07.9s icrs
-scale_distance = 2.2 kpc
-arrows_pa = 75 deg
-
-[G35.13_continuum]
-loc = 3 1, 3 2
-contour = ${contdir}/G35.13-0.74.config8.selfcal.cont_avg.robust0.5.image.fits
 ignore_units = true
 beam_color = ${contour_colors}
 beam_zorder = 5
