--- a/configs/plots/papers/group_moments.4.cfg
+++ b/configs/plots/papers/group_moments.4.cfg
@@ -1,6 +1,6 @@
 [DEFAULT]
 ncols = 3
-nrows = 4
+nrows = 3
 sharex = false 
 sharey = false
 styles = maps vik
@@ -33,8 +33,8 @@ contour_colors = #7f7f7f
 contour_stretch = log
 negative_nsigma = 3
 label_position = 0.04 0.92
-enumerate_shift = 36
-enumerate_modulus = 12
+enumerate_shift = 27
+enumerate_modulus = 9
 # Units
 ignore_units = false
 labelpad = 5
@@ -61,274 +61,238 @@ arrows_linewidth = 3
 basedir = ../
 contdir = ${basedir}/source_data/continuum
 
-[I18182_alma3_moment1]
+[G351_alma2_moment1]
 loc = 0 0
-source = IRAS_18182-1433
-results = ${basedir}/results/${source}/c5c8/per_hot_core/alma3_moments
-image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
-shift_data = -61.12 km/s
-label = IRAS 18182-1433 ALMAe5 CH$$_3$$CN
+source = G351.77-0.54
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma2_moments
+image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width30.subcube.moment1.fits
+shift_data = 3.83 km/s
+label = ${source} ALMAe2 CH$$_3$$OH
 # Range
 vmin = -7 km/s
 vmax = 7 km/s
 # Recenter
-center = 18h21m09.12462s -14d31m48.5998s icrs
+center = 17h26m42.53329s -36d09m17.3878s icrs
 # Artists
-scale = 18h21m09.095s -14d31m49.0s icrs
-scale_distance = 3.58 kpc
+scale = 17h26m42.495s -36d09m17.8s icrs
+scale_distance = 2.0 kpc
 arrows = ${center}, ${center}
 arrows_color = #f93dff, #02b829
 arrows_ls = -, --
 arrows_style = ->, -
-arrows_pa = 10 deg, 130 deg
+arrows_pa = 130 deg, -24 deg
 
-[I18182_alma5_moment1]
+[G351_continuum]
+loc = 0 0
+contour = ${contdir}/G351.77-0.54.config8.cont_avg.selfcal_0.5_hogbom.image.fits
+ignore_units = true
+beam_color = ${contour_colors}
+beam_zorder = 5
+
+[G5.89-0.37_alma14_moment1]
 loc = 0 1
-source = IRAS_18182-1433
-results = ${basedir}/results/${source}/c5c8/per_hot_core/alma5_moments
+source = G5.89-0.37
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma14_moments
 image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
-shift_data = -62.7 km/s
-label = IRAS 18182-1433 ALMAe10 CH$$_3$$CN
+shift_data = -7.92 km/s
+label = G5.89-0.37 ALMAe1 CH$$_3$$CN
 # Range
-vmin = -8 km/s
-vmax = 8 km/s
+vmin = -6 km/s
+vmax = 6 km/s
 # Recenter
-center = 18h21m09.01613s -14d31m47.9401s icrs
+center = 18h00m30.63209s -24d04m03.0057s icrs
 radius = 0.3 arcsec
 # Artists
-scale = 18h21m08.999s -14d31m48.2s icrs
-scale_distance = 3.58 kpc
-arrows_pa = 40 deg
+scale = 18h00m30.614s -24d04m03.22s icrs
+scale_distance = 2.99 kpc
+arrows_pa = -30 deg
 
-[I18182_continuum]
-loc = 0 0, 0 1
-contour = ${contdir}/IRAS_18182-1433.config8.cont_avg.selfcal_0.5_hogbom.image.fits
+[G5.89-0.37_continuum]
+loc = 0 1
+contour = ${contdir}/G5.89-0.37.config8.cont_avg.selfcal_0.5_hogbom.image.fits
 ignore_units = true
 beam_color = ${contour_colors}
 beam_zorder = 5
 
-[NGC6334I_alma1_moment1]
+[I16562_alma1_moment1]
 loc = 0 2
-source = NGC6334I
+source = IRAS_165623959
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
-#image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width30.subcube.moment1.fits
-image = ${results}/HNCO_10_3_8_-9_3_7__width30.subcube.moment1.fits
-shift_data = 8.0 km/s
-#label = NGC 6334I ALMA1 CH$$_3$$OH
-label = NGC 6334I ALMAe? HNCO
+image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
+shift_data = 16.86 km/s
+label = IRAS 16562-3959 ALMAe1 CH$$_3$$CN
 # Range
 vmin = -6 km/s
 vmax = 6 km/s
 # Recenter
-center = 17h20m53.41869s -35d46m57.8969s icrs
+center = 16h59m41.62564s -40d03m43.6385s icrs
 # Artists
-scale = 17h20m53.38s -35d46m58.3s icrs
-scale_distance = 1.35 kpc
+scale = 16h59m41.59s -40d03m44.1s icrs
+scale_distance = 2.38 kpc
 arrows = ${center}, ${center}
 arrows_color = #f93dff, #02b829
 arrows_ls = -, --
 arrows_style = ->, -
-arrows_pa = 60 deg, 0 deg
+arrows_pa = 10 deg, 100 deg
 
-[NGC6334I_alma8_moment1]
+[I16562_alma2_moment1]
 loc = 1 0
-source = NGC6334I
-results = ${basedir}/results/${source}/c5c8/per_hot_core/alma8_moments
-image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width30.subcube.moment1.fits
-shift_data = 4.7 km/s
-label = NGC 6334I ALMAe2 CH$$_3$$OH
-# Range
-vmin = -3 km/s
-vmax = 3 km/s
-# Recenter
-center = 17h20m53.64398s -35d46m54.8823s icrs
-radius = 0.3 arcsec
-# Artists
-scale = 17h20m53.622s -35d46m55.1s icrs
-scale_distance = 1.35 kpc
-arrows_pa = 50 deg
-
-[NGC6334I_alma4_moment1]
-loc = 1 1
-source = NGC6334I
-results = ${basedir}/results/${source}/c5c8/per_hot_core/alma4_moments
-#image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width30.subcube.moment1.fits
-image = ${results}/HNCO_10_3_8_-9_3_7__width30.subcube.moment1.fits
-#shift_data = 10.7 km/s
-shift_data = 6.92 km/s
-#label = NGC 6334I ALMA4 CH$$_3$$OH
-label = NGC 6334I ALMAe3 HNCO
+source = IRAS_165623959
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma2_moments
+image = ${results}/CH3CN_12_3_-11_3__width24.subcube.moment1.fits
+shift_data = 11.65 km/s
+label = IRAS 16562-3959 ALMAe4 CH$$_3$$CN
 # Range
 vmin = -6 km/s
 vmax = 6 km/s
 # Recenter
-#center = 17h20m53.18700s -35d46m59.3280s icrs
-center = 17h20m53.16652s -35d46m59.1704s icrs
-radius = 0.7 arcsec
+center = 16h59m41.08769s -40d03m39.0848s icrs
 # Artists
-scale = 17h20m53.12s -35d46m59.8s icrs
-scale_distance = 1.35 kpc
+scale = 16h59m41.05s -40d03m39.5s icrs
+scale_distance = 2.38 kpc
 arrows = ${center}, ${center}
 arrows_color = #f93dff, #02b829
 arrows_ls = -, --
 arrows_style = ->, -
-arrows_pa = 20 deg, 250 deg
+arrows_pa = 225 deg, 285 deg
 
-[NGC6334I_continuum]
-loc = 0 2, 1 0, 1 1
-contour = ${contdir}/NGC6334I.config8.cont_avg.selfcal_0.5_hogbom.image.fits
+[I16562_continuum]
+loc = 0 2, 1 0
+contour = ${contdir}/IRAS_165623959.config8.cont_avg.selfcal_0.5_hogbom.image.fits
 ignore_units = true
 beam_color = ${contour_colors}
 beam_zorder = 5
 
-[NGC6334IN_alma2_moment1]
+[I18089_alma1_moment1]
+loc = 1 1
+source = IRAS_180891732
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
+image = ${results}/CH3CN_12_3_-11_3__width40.subcube.moment1.fits
+shift_data = -32.88 km/s
+label = IRAS 18089-1732 ALMAe1 CH$$_3$$CN
+# Range
+vmin = -7 km/s
+vmax = 7 km/s
+# Recenter
+center = 18h11m51.45454s -17d31m28.8163s icrs
+radius = 0.6 arcsec
+# Artists
+scale = 18h11m51.42s -17d31m29.35s icrs
+scale_distance = 2.34 kpc
+arrows = ${center}, ${center}
+arrows_color = #f93dff, #02b829
+arrows_ls = -, --
+arrows_style = ->, -
+arrows_pa = 245 deg, -12 deg
+
+[I18089_alma3_moment1]
 loc = 1 2
-source = NGC_6334_I_N
-results = ${basedir}/results/${source}/c5c8/per_hot_core/alma2_moments
-image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width30.subcube.moment1.fits
-shift_data = 3.9 km/s
-#shift_data = -0.74 km/s
-label = NGC 6334I(N) ALMAe1 CH$$_3$$OH
+source = IRAS_180891732
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma3_moments
+image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
+shift_data = -33.02 km/s
+label = IRAS 18089-1732 ALMAe2 CH$$_3$$CN
 # Range
 vmin = -5 km/s
 vmax = 5 km/s
 # Recenter
-center = 17h20m54.59280s -35d45m17.3686s icrs
+center = 18h11m51.39962s -17d31m29.9457s icrs
+radius = 0.3 arcsec
 # Artists
-scale = 17h20m54.559s -35d45m17.8s icrs
-scale_distance = 1.35 kpc
-arrows_pa = -55 deg
-
-[NGC6334IN_alma1_moment1]
-loc = 2 0
-source = NGC_6334_I_N
-results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
-image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width30.subcube.moment1.fits
-shift_data = 1.77 km/s
-label = NGC 6334I(N) ALMAe2 CH$$_3$$OH
-# Range
-vmin = -8 km/s
-vmax = 8 km/s
-# Recenter
-center = 17h20m55.19138s -35d45m03.9525s icrs
-# Artists
-scale = 17h20m55.158s -35d45m04.4s icrs
-scale_distance = 1.35 kpc
+scale = 18h11m51.38s -17d31m30.2s icrs
+scale_distance = 2.34 kpc
 arrows = ${center}, ${center}
 arrows_color = #f93dff, #02b829
 arrows_ls = -, --
 arrows_style = ->, -
-arrows_pa = 310 deg, 35 deg
+arrows_pa = 315 deg, 35 deg
 
-[NGC6334IN_alma6_moment1]
-loc = 2 1
-source = NGC_6334_I_N
-results = ${basedir}/results/${source}/c5c8/per_hot_core/alma6_moments
-image = ${results}/CH3CN_12_3_-11_3__width40.subcube.moment1.fits
-shift_data = 7.2 km/s
-label = NGC 6334I(N) ALMAe4 CH$$_3$$OH
-# Range
-vmin = -8 km/s
-vmax = 8 km/s
-# Recenter
-center = 17h20m54.61962s -35d45m08.6715s icrs
-radius = 0.3 arcsec
-# Artists
-scale = 17h20m54.598s -35d45m08.9s icrs
-scale_distance = 1.35 kpc
-arrows_pa = 130 deg
-
-[NGC6334IN_alma4_moment1]
-loc = 2 2
-source = NGC_6334_I_N
-results = ${basedir}/results/${source}/c5c8/per_hot_core/alma4_moments
-image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
-shift_data = 6.7 km/s
-label = NGC 6334I(N) ALMAe5 CH$$_3$$CN
-# Range
-vmin = -6 km/s
-vmax = 6 km/s
-# Recenter
-center = 17h20m54.87122s -35d45m06.4309s icrs
-radius = 0.4 arcsec
-# Artists
-scale = 17h20m54.842s -35d45m06.8s icrs
-scale_distance = 1.35 kpc
-arrows = ${center}, ${center}
-arrows_color = #f93dff, #02b829
-arrows_ls = -, --
-arrows_style = ->, -
-arrows_pa = 130 deg, 40 deg
-
-[NGC6334IN_alma11_moment1]
-loc = 3 0
-set_xlabel = true
-set_ylabel = true
-source = NGC_6334_I_N
-results = ${basedir}/results/${source}/c5c8/per_hot_core/alma11_moments
-image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
-shift_data = 5.0 km/s
-label = NGC 6334I(N) ALMAe13 CH$$_3$$OH
-# Range
-vmin = -8 km/s
-vmax = 8 km/s
-# Recenter
-center = 17h20m54.83871s -35d45m06.0527s icrs
-radius = 0.3 arcsec
-# Artists
-scale = 17h20m54.818s -35d45m06.3s icrs
-scale_distance = 1.35 kpc
-arrows_pa = 160 deg
-
-[NGC6334IN_continuum]
-loc = 1 2, 2 0, 2 1, 2 2, 3 0
-contour = ${contdir}/NGC_6334_I_N.config8.cont_avg.selfcal_0.5_hogbom.image.fits
+[I18089_continuum]
+loc = 1 1, 1 2
+contour = ${contdir}/IRAS_180891732.config8.cont_avg.selfcal_0.5_hogbom.image.fits
 ignore_units = true
 beam_color = ${contour_colors}
 beam_zorder = 5
 
-[W33A_alma1a_moment1]
-loc = 3 1
-source = W33A
-results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1a_moments
-image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
-shift_data = -37.9 km/s
-label = W33A ALMAe1 CH$$_3$$CN
+[IRAS18162_alma1_moment1]
+loc = 2 0
+set_xlabel = true
+set_ylabel = true
+source = IRAS_181622048
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
+image = ${results}/c-HCOOH_10_4_6_-9_4_5__width30.subcube.moment1.fits
+shift_data = -45.69 km/s
+label = IRAS 18162-2048 ALMAe1 c-HCOOH
 # Range
 vmin = -6 km/s
-vmax = 6 km/s
+vcenter = 0 km/s
+vmax = 10 km/s
 # Recenter
-center = 18h14m39.51004s -17d52m00.1338s icrs
+center = 18h19m12.09528s -20d47m30.9566s icrs
+radius = 0.4 arcsec
 # Artists
-scale = 18h14m39.48s -17d52m00.6s icrs
-scale_distance = 2.53 kpc
+scale = 18h19m12.065s -20d47m31.4s icrs
+scale_distance = 1.30 kpc
 arrows = ${center}, ${center}
 arrows_color = #f93dff, #02b829
 arrows_ls = -, --
 arrows_style = ->, -
-arrows_pa = -30 deg, 120 deg
+arrows_pa = -70 deg, 20 deg
 
-[W33A_alma1b_moment1]
-loc = 3 2
-source = W33A
-results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1a_moments
+[IRAS18162_continuum]
+loc = 2 0
+contour = ${contdir}/IRAS_181622048.config8.cont_avg.selfcal_0.5_hogbom.image.fits
+ignore_units = true
+beam_color = ${contour_colors}
+beam_zorder = 5
+
+[I18182_alma2_moment1]
+loc = 2 1
+source = IRAS_18182-1433
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma2_moments
 image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
-shift_data = -38.2 km/s
-label = W33A ALMAe4 CH$$_3$$CN
+shift_data = -60.64 km/s
+label = IRAS 18182-1433 ALMAe1 CH$$_3$$CN
 # Range
-vmin = -6 km/s
-vmax = 6 km/s
+vmin = -3 km/s
+vmax = 3 km/s
 # Recenter
-center = 18h14m39.52226s -17d52m00.4531s icrs
+center = 18h21m08.97822s -14d31m47.5970s icrs
 radius = 0.3 arcsec
 # Artists
-scale = 18h14m39.505s -17d52m00.7s icrs
-scale_distance = 2.53 kpc
-arrows_pa = 90 deg
+scale = 18h21m08.96s -14d31m47.805s icrs
+scale_distance = 3.58 kpc
+arrows = ${center}, ${center}
+arrows_color = #f93dff, #02b829
+arrows_ls = -, --
+arrows_style = ->, -
+arrows_pa = 0 deg, 90 deg
 
-[W33A_continuum]
-loc = 3 1, 3 2
-contour = ${contdir}/W33A.config8.cont_avg.selfcal_0.5_hogbom.image.fits
+[I18182_alma1_moment1]
+loc = 2 2
+source = IRAS_18182-1433
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
+image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
+shift_data = -62.78 km/s
+label = IRAS 18182-1433 ALMAe2 CH$$_3$$CN
+# Range
+vmin = -5 km/s
+vmax = 5 km/s
+# Recenter
+center = 18h21m09.04928s -14d31m47.7925s icrs
+radius = 0.4 arcsec
+# Artists
+scale = 18h21m09.028s -14d31m48.1s icrs
+scale_distance = 3.58 kpc
+arrows = ${center}, ${center}
+arrows_color = #f93dff, #02b829
+arrows_ls = -, --
+arrows_style = ->, -
+arrows_pa = 40 deg, 155 deg
+
+[I18182_continuum]
+loc = 2 1, 2 2
+contour = ${contdir}/IRAS_18182-1433.config8.cont_avg.selfcal_0.5_hogbom.image.fits
 ignore_units = true
 beam_color = ${contour_colors}
 beam_zorder = 5
