--- a/configs/plots/papers/group_moments.3.cfg
+++ b/configs/plots/papers/group_moments.3.cfg
@@ -1,6 +1,6 @@
 [DEFAULT]
 ncols = 3
-nrows = 4
+nrows = 3
 sharex = false 
 sharey = false
 styles = maps vik
@@ -33,8 +33,8 @@ contour_colors = #7f7f7f
 contour_stretch = log
 negative_nsigma = 3
 label_position = 0.04 0.92
-enumerate_shift = 24
-enumerate_modulus = 12
+enumerate_shift = 18
+enumerate_modulus = 9
 # Units
 ignore_units = false
 labelpad = 5
@@ -61,8 +61,168 @@ arrows_linewidth = 3
 basedir = ../
 contdir = ${basedir}/source_data/continuum
 
-[G35.13_alma6_moment1]
+[G336_alma1_moment1]
 loc = 0 0
+source = G336.01-0.82
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
+image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width30.subcube.moment1.fits
+shift_data = 47.2 km/s
+label = ${source} ALMAe2 CH$$_3$$OH
+# Range
+vmin = -6 km/s
+vmax = 6 km/s
+# Recenter
+center = 16h35m09.25854s -48d46m47.6623s icrs
+# Artists
+scale = 16h35m09.218s -48d46m48.1s icrs
+scale_distance = 3.1 kpc
+arrows = ${center}, ${center}
+arrows_color = #f93dff, #02b829
+arrows_ls = -, --
+arrows_style = ->, -
+arrows_pa = 125 deg, 205 deg
+
+[G336_continuum]
+loc = 0 0
+contour = ${contdir}/G336.01-0.82.config8.cont_avg.selfcal_0.5_hogbom.image.fits
+ignore_units = true
+beam_color = ${contour_colors}
+beam_zorder = 5
+
+[G34_alma1_moment1]
+loc = 0 1
+source = G34.43+0.24
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
+image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width30.subcube.moment1.fits
+shift_data = -58.44 km/s
+label = ${source} ALMAe2 CH$$_3$$OH
+# Range
+vmin = -5 km/s
+vmax = 5 km/s
+# Recenter
+center = 18h53m18.00684s +01d25m25.4228s icrs
+# Artists
+scale = 18h53m17.98s +01d25m25.0s icrs
+scale_distance = 3.03 kpc
+arrows = ${center}, ${center}
+arrows_color = #f93dff, #02b829
+arrows_ls = -, --
+arrows_style = ->, -
+arrows_pa = 280 deg, 200 deg
+
+[G34_continuum]
+loc = 0 1
+contour = ${contdir}/G34.43+0.24.config8.cont_avg.selfcal_0.5_hogbom.image.fits
+ignore_units = true
+beam_color = ${contour_colors}
+beam_zorder = 5
+
+[G343_alma1_moment1]
+loc = 0 2
+source = G343.12-0.06
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
+image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width20.subcube.moment1.fits
+shift_data = 33.71 km/s
+label = ${source} ALMAe1 CH$$_3$$OH
+# Range
+vmin = -5 km/s
+vmax = 5 km/s
+# Recenter
+center = 16h58m17.20735s -42d52m07.4161s icrs
+# Artists
+scale = 16h58m17.17s -42d52m07.85s icrs
+scale_distance = 2.9 kpc
+arrows = ${center}, ${center}
+arrows_color = #f93dff, #02b829
+arrows_ls = -, --
+arrows_style = ->, -
+arrows_pa = 230 deg, 135 deg
+
+[G343_continuum]
+loc = 0 2
+contour = ${contdir}/IRAS165474247_G343.12-0.06.config8.cont_avg.selfcal_0.5_hogbom.image.fits
+ignore_units = true
+beam_color = ${contour_colors}
+beam_zorder = 5
+
+[G35.03_alma1_moment1]
+loc = 1 0
+source = G35.03+0.35_A
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
+image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
+shift_data = -45.94 km/s
+label = G35.03+0.35 A ALMAe1 CH$$_3$$CN
+# Range
+vmin = -8 km/s
+vmax = 8 km/s
+# Recenter
+center = 18h54m00.65099s +02d01m19.3410s icrs
+# Artists
+scale = 18h54m00.62s +02d01m18.9s icrs
+scale_distance = 2.32 kpc
+arrows = ${center}, ${center}
+arrows_color = #f93dff, #02b829
+arrows_ls = -, --
+arrows_style = ->, -
+arrows_pa = 310 deg, 110 deg 
+
+[G35.03_continuum]
+loc = 1 0
+contour = ${contdir}/G35.03+0.35_A.config8.cont_avg.selfcal_0.5_hogbom.image.fits
+ignore_units = true
+beam_color = ${contour_colors}
+beam_zorder = 5
+
+[G35.13_alma1_moment1]
+loc = 1 1
+source = G35.13-0.74
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
+image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
+shift_data = -35.93 km/s
+label = ${source} ALMAe1 CH$$_3$$CN
+# Range
+vmin = -8 km/s
+vmax = 8 km/s
+# Recenter
+center = 18h58m06.13626s +01d37m07.4306s icrs
+# Artists
+scale = 18h58m06.11s +01d37m07.0s icrs
+scale_distance = 2.2 kpc
+arrows = ${center}, ${center}
+arrows_color = #f93dff, #02b829
+arrows_ls = -, --
+arrows_style = ->, -
+arrows_pa = 45 deg, 145 deg
+
+[G35.13_alma2_moment1]
+loc = 1 2
+source = G35.13-0.74
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma2_moments
+image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
+shift_data = -34.39 km/s
+label = ${source} ALMAe2 CH$$_3$$CN
+# Range
+vmin = -5 km/s
+vmax = 5 km/s
+# Recenter
+center = 18h58m06.16874s +01d37m08.1602s icrs
+radius = 0.3 arcsec
+# Artists
+scale = 18h58m06.15s +01d37m07.9s icrs
+scale_distance = 2.2 kpc
+arrows_pa = 75 deg
+
+[G35.13_continuum]
+loc = 1 1, 1 2
+contour = ${contdir}/G35.13-0.74.config8.selfcal.cont_avg.robust0.5.image.fits
+ignore_units = true
+beam_color = ${contour_colors}
+beam_zorder = 5
+
+[G35.13_alma6_moment1]
+loc = 2 0
+set_xlabel = true
+set_ylabel = true
 source = G35.13-0.74
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma6_moments
 image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
@@ -84,14 +244,14 @@ arrows_style = ->, -
 arrows_pa = 95 deg, 0 deg
 
 [G35.13_continuum]
-loc = 0 0
+loc = 2 0
 contour = ${contdir}/G35.13-0.74.config8.selfcal.cont_avg.robust0.5.image.fits
 ignore_units = true
 beam_color = ${contour_colors}
 beam_zorder = 5
 
 [G35.20_alma1_moment1]
-loc = 0 1
+loc = 2 1
 source = G35.20-0.74_N
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
 image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width30.subcube.moment1.fits
@@ -113,7 +273,7 @@ arrows_style = ->, -
 arrows_pa = -10 deg, 30 deg
 
 [G35.20_alma2_moment1]
-loc = 0 2
+loc = 2 2
 source = G35.20-0.74_N
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma2_moments
 image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width30.subcube.moment1.fits
@@ -134,244 +294,8 @@ arrows_style = ->, -
 arrows_pa = -23 deg, 3 deg
 
 [G35.20_continuum]
-loc = 0 1, 0 2
-contour = ${contdir}/G35.20-0.74_N.config8.cont_avg.selfcal_0.5_hogbom.image.fits
-ignore_units = true
-beam_color = ${contour_colors}
-beam_zorder = 5
-
-[G351_alma2_moment1]
-loc = 1 0
-source = G351.77-0.54
-results = ${basedir}/results/${source}/c5c8/per_hot_core/alma2_moments
-image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width30.subcube.moment1.fits
-shift_data = 3.83 km/s
-label = ${source} ALMAe2 CH$$_3$$OH
-# Range
-vmin = -7 km/s
-vmax = 7 km/s
-# Recenter
-center = 17h26m42.53329s -36d09m17.3878s icrs
-# Artists
-scale = 17h26m42.495s -36d09m17.8s icrs
-scale_distance = 2.0 kpc
-arrows = ${center}, ${center}
-arrows_color = #f93dff, #02b829
-arrows_ls = -, --
-arrows_style = ->, -
-arrows_pa = 130 deg, -24 deg
-
-[G351_continuum]
-loc = 1 0
-contour = ${contdir}/G351.77-0.54.config8.cont_avg.selfcal_0.5_hogbom.image.fits
-ignore_units = true
-beam_color = ${contour_colors}
-beam_zorder = 5
-
-[G5.89-0.37_alma14_moment1]
-loc = 1 1
-source = G5.89-0.37
-results = ${basedir}/results/${source}/c5c8/per_hot_core/alma14_moments
-image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
-shift_data = -7.92 km/s
-label = G5.89-0.37 ALMAe1 CH$$_3$$CN
-# Range
-vmin = -6 km/s
-vmax = 6 km/s
-# Recenter
-center = 18h00m30.63209s -24d04m03.0057s icrs
-radius = 0.3 arcsec
-# Artists
-scale = 18h00m30.614s -24d04m03.22s icrs
-scale_distance = 2.99 kpc
-arrows_pa = -30 deg
-
-[G5.89-0.37_continuum]
-loc = 1 1
-contour = ${contdir}/G5.89-0.37.config8.cont_avg.selfcal_0.5_hogbom.image.fits
-ignore_units = true
-beam_color = ${contour_colors}
-beam_zorder = 5
-
-[I16562_alma1_moment1]
-loc = 1 2
-source = IRAS_165623959
-results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
-image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
-shift_data = 16.86 km/s
-label = IRAS 16562-3959 ALMAe1 CH$$_3$$CN
-# Range
-vmin = -6 km/s
-vmax = 6 km/s
-# Recenter
-center = 16h59m41.62564s -40d03m43.6385s icrs
-# Artists
-scale = 16h59m41.59s -40d03m44.1s icrs
-scale_distance = 2.38 kpc
-arrows = ${center}, ${center}
-arrows_color = #f93dff, #02b829
-arrows_ls = -, --
-arrows_style = ->, -
-arrows_pa = 10 deg, 100 deg
-
-[I16562_alma2_moment1]
-loc = 2 0
-source = IRAS_165623959
-results = ${basedir}/results/${source}/c5c8/per_hot_core/alma2_moments
-image = ${results}/CH3CN_12_3_-11_3__width24.subcube.moment1.fits
-shift_data = 11.65 km/s
-label = IRAS 16562-3959 ALMAe4 CH$$_3$$CN
-# Range
-vmin = -6 km/s
-vmax = 6 km/s
-# Recenter
-center = 16h59m41.08769s -40d03m39.0848s icrs
-# Artists
-scale = 16h59m41.05s -40d03m39.5s icrs
-scale_distance = 2.38 kpc
-arrows = ${center}, ${center}
-arrows_color = #f93dff, #02b829
-arrows_ls = -, --
-arrows_style = ->, -
-arrows_pa = 225 deg, 285 deg
-
-[I16562_continuum]
-loc = 1 2, 2 0
-contour = ${contdir}/IRAS_165623959.config8.cont_avg.selfcal_0.5_hogbom.image.fits
-ignore_units = true
-beam_color = ${contour_colors}
-beam_zorder = 5
-
-[I18089_alma1_moment1]
-loc = 2 1
-source = IRAS_180891732
-results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
-image = ${results}/CH3CN_12_3_-11_3__width40.subcube.moment1.fits
-shift_data = -32.88 km/s
-label = IRAS 18089-1732 ALMAe1 CH$$_3$$CN
-# Range
-vmin = -7 km/s
-vmax = 7 km/s
-# Recenter
-center = 18h11m51.45454s -17d31m28.8163s icrs
-radius = 0.6 arcsec
-# Artists
-scale = 18h11m51.42s -17d31m29.35s icrs
-scale_distance = 2.34 kpc
-arrows = ${center}, ${center}
-arrows_color = #f93dff, #02b829
-arrows_ls = -, --
-arrows_style = ->, -
-arrows_pa = 245 deg, -12 deg
-
-[I18089_alma3_moment1]
-loc = 2 2
-source = IRAS_180891732
-results = ${basedir}/results/${source}/c5c8/per_hot_core/alma3_moments
-image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
-shift_data = -33.02 km/s
-label = IRAS 18089-1732 ALMAe2 CH$$_3$$CN
-# Range
-vmin = -5 km/s
-vmax = 5 km/s
-# Recenter
-center = 18h11m51.39962s -17d31m29.9457s icrs
-radius = 0.3 arcsec
-# Artists
-scale = 18h11m51.38s -17d31m30.2s icrs
-scale_distance = 2.34 kpc
-arrows = ${center}, ${center}
-arrows_color = #f93dff, #02b829
-arrows_ls = -, --
-arrows_style = ->, -
-arrows_pa = 315 deg, 35 deg
-
-[I18089_continuum]
 loc = 2 1, 2 2
-contour = ${contdir}/IRAS_180891732.config8.cont_avg.selfcal_0.5_hogbom.image.fits
-ignore_units = true
-beam_color = ${contour_colors}
-beam_zorder = 5
-
-[IRAS18162_alma1_moment1]
-loc = 3 0
-set_xlabel = true
-set_ylabel = true
-source = IRAS_181622048
-results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
-image = ${results}/c-HCOOH_10_4_6_-9_4_5__width30.subcube.moment1.fits
-shift_data = -45.69 km/s
-label = IRAS 18162-2048 ALMAe1 c-HCOOH
-# Range
-vmin = -6 km/s
-vcenter = 0 km/s
-vmax = 10 km/s
-# Recenter
-center = 18h19m12.09528s -20d47m30.9566s icrs
-radius = 0.4 arcsec
-# Artists
-scale = 18h19m12.065s -20d47m31.4s icrs
-scale_distance = 1.30 kpc
-arrows = ${center}, ${center}
-arrows_color = #f93dff, #02b829
-arrows_ls = -, --
-arrows_style = ->, -
-arrows_pa = -70 deg, 20 deg
-
-[IRAS18162_continuum]
-loc = 3 0
-contour = ${contdir}/IRAS_181622048.config8.cont_avg.selfcal_0.5_hogbom.image.fits
-ignore_units = true
-beam_color = ${contour_colors}
-beam_zorder = 5
-
-[I18182_alma2_moment1]
-loc = 3 1
-source = IRAS_18182-1433
-results = ${basedir}/results/${source}/c5c8/per_hot_core/alma2_moments
-image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
-shift_data = -60.64 km/s
-label = IRAS 18182-1433 ALMAe1 CH$$_3$$CN
-# Range
-vmin = -3 km/s
-vmax = 3 km/s
-# Recenter
-center = 18h21m08.97822s -14d31m47.5970s icrs
-radius = 0.3 arcsec
-# Artists
-scale = 18h21m08.96s -14d31m47.805s icrs
-scale_distance = 3.58 kpc
-arrows = ${center}, ${center}
-arrows_color = #f93dff, #02b829
-arrows_ls = -, --
-arrows_style = ->, -
-arrows_pa = 0 deg, 90 deg
-
-[I18182_alma1_moment1]
-loc = 3 2
-source = IRAS_18182-1433
-results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
-image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
-shift_data = -62.78 km/s
-label = IRAS 18182-1433 ALMAe2 CH$$_3$$CN
-# Range
-vmin = -5 km/s
-vmax = 5 km/s
-# Recenter
-center = 18h21m09.04928s -14d31m47.7925s icrs
-radius = 0.4 arcsec
-# Artists
-scale = 18h21m09.028s -14d31m48.1s icrs
-scale_distance = 3.58 kpc
-arrows = ${center}, ${center}
-arrows_color = #f93dff, #02b829
-arrows_ls = -, --
-arrows_style = ->, -
-arrows_pa = 40 deg, 155 deg
-
-[I18182_continuum]
-loc = 3 1, 3 2
-contour = ${contdir}/IRAS_18182-1433.config8.cont_avg.selfcal_0.5_hogbom.image.fits
+contour = ${contdir}/G35.20-0.74_N.config8.cont_avg.selfcal_0.5_hogbom.image.fits
 ignore_units = true
 beam_color = ${contour_colors}
 beam_zorder = 5
