Fix duplicated section

--- a/configs/plots/papers/group_moments.3.cfg
+++ b/configs/plots/papers/group_moments.3.cfg
@@ -212,13 +212,6 @@ scale = 18h58m06.15s +01d37m07.9s icrs
 scale_distance = 2.2 kpc
 arrows_pa = 75 deg
 
-[G35.13_continuum]
-loc = 1 1, 1 2
-contour = ${contdir}/G35.13-0.74.config8.selfcal.cont_avg.robust0.5.image.fits
-ignore_units = true
-beam_color = ${contour_colors}
-beam_zorder = 5
-
 [G35.13_alma6_moment1]
 loc = 2 0
 set_xlabel = true
@@ -244,7 +237,7 @@ arrows_style = ->, -
 arrows_pa = 95 deg, 0 deg
 
 [G35.13_continuum]
-loc = 2 0
+loc = 1 1, 1 2, 2 0
 contour = ${contdir}/G35.13-0.74.config8.selfcal.cont_avg.robust0.5.image.fits
 ignore_units = true
 beam_color = ${contour_colors}
