Extend right border

--- a/configs/plots/papers/figsets/dihca6_moments_fig1.39.cfg
+++ b/configs/plots/papers/figsets/dihca6_moments_fig1.39.cfg
@@ -10,7 +10,7 @@ stretch = linear
 vertical_cbar = false
 horizontal_cbar = true
 left = 1.3
-right = 0.155
+right = 0.2
 top = 0.6
 bottom = 0.5
 hspace = 0.1
@@ -65,7 +65,7 @@ results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
 image = ${results}/HNCO_10_3_8_-9_3_7__width30.subcube.moment1.fits
 shift_data = 8.0 km/s
 #label = NGC 6334I ALMA1 CH$$_3$$OH
-label = NGC 6334I ALMAe? HNCO
+label = NGC 6334I ALMAe1 HNCO
 # Range
 vmin = -6 km/s
 vmax = 6 km/s
