Swap moments figure 6 and 7

--- a/configs/plots/papers/figsets/dihca6_moments_fig1.6.cfg
+++ b/configs/plots/papers/figsets/dihca6_moments_fig1.6.cfg
@@ -57,23 +57,27 @@ arrows_linewidth = 3
 basedir = ../
 contdir = ${basedir}/source_data/continuum
 
-[G11.92_alma1b_moment1]
+[G11.92_alma3_moment1]
 loc = 0 0
+override_xlabel = true
+override_ylabel = true
+set_xlabel = true
+set_ylabel = true
 source = G11.92-0.61
-results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1b_moments
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma3_moments
 image = ${results}/CH3CN_12_3_-11_3__width24.subcube.moment1.fits
-shift_data = -37 km/s
-label = ${source} ALMAe5 CH$$_3$$CN
+shift_data = -35.7 km/s
+label = ${source} ALMAe4 CH$$_3$$CN
 # Range
-vmin = -4 km/s
-vmax = 4 km/s
+vmin = -6 km/s
+vmax = 6 km/s
 # Recenter
-center = 18h13m58.12719s -18d54m20.7199s icrs
-radius = 0.3 arcsec
+center = 18h13m58.13491s -18d54m16.2731s icrs
+radius = 0.4 arcsec
 # Artists
-scale = 18h13m58.11s -18d54m21.0s icrs
+scale = 18h13m58.11s -18d54m16.6s icrs
 scale_distance = 3.37 kpc
-arrows_pa = -15 deg
+arrows_pa = 225 deg
 
 [G11.92_continuum]
 loc = 0 0
