--- a/configs/plots/papers/group_moments.1.cfg
+++ b/configs/plots/papers/group_moments.1.cfg
@@ -33,7 +33,7 @@ contour_colors = #7f7f7f
 contour_stretch = log
 negative_nsigma = 3
 label_position = 0.04 0.92
-enumerate_modulus = 12
+#enumerate_modulus = 12
 # Units
 ignore_units = false
 labelpad = 5
