--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig2.23.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig2.23.cfg
@@ -30,7 +30,8 @@ xticks_fmt = {x:.1f}
 yticks_fmt = {x:.0f}
 inverty = true
 ticks_color = w
-label = ${source} ALMAe${almae} PA=${paval}${deg}
+enumerate = false
+label = PA=${paval}${deg}
 almae = ${alma}
 label_position = 0.03 0.92
 vlines = 0 arcsec
@@ -49,7 +50,7 @@ loc = 0 0
 source = IRAS_180891732
 alma = 1
 paval = 245
-label = IRAS 18089-1732 ALMAe${almae} PA=${paval}${deg}
+#label = IRAS 18089-1732 ALMAe${almae} PA=${paval}${deg}
 pvmap = ${results}/${source}_alma1_rotation.CH3CN_K3.ra272.96439_dec-17.52467.PA${paval}.fits
 hlines = 32.88 km/s
 rms = 1.6 mJy/beam
@@ -113,7 +114,7 @@ loc = 0 1
 source = IRAS_180891732
 alma = 1
 paval = 335
-label = IRAS 18089-1732 ALMAe${almae} PA=${paval}${deg}
+#label = IRAS 18089-1732 ALMAe${almae} PA=${paval}${deg}
 pvmap = ${results}/${source}_alma1_rotation.CH3CN_K3.ra272.96439_dec-17.52467.PA${paval}.fits
 hlines = 32.88 km/s
 rms = 1.6 mJy/beam
