--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig2.25.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig2.25.cfg
@@ -31,7 +31,8 @@ yticks_fmt = {x:.0f}
 inverty = true
 ticks_color = w
 almae = ${alma}
-label = ${source} ALMAe${almae} PA=${paval}${deg}
+enumerate = false
+label = PA=${paval}${deg}
 label_position = 0.03 0.92
 vlines = 0 arcsec
 vlines_linestyle = :
@@ -49,7 +50,7 @@ loc = 0 0
 source = IRAS_181622048
 alma = 1
 paval = -70
-label = IRAS 18162-2048 ALMAe${almae} PA=${paval}${deg}
+#label = IRAS 18162-2048 ALMAe${almae} PA=${paval}${deg}
 pvmap = ${results}/${source}_alma1_rotation.c-HCOOH_spw3.ra274.80040_dec-20.79193.PA${paval}.fits
 xlim = -0.55 0.55 arcsec
 hlines = 47.0 km/s
@@ -114,7 +115,7 @@ loc = 0 1
 source = IRAS_181622048
 alma = 1
 paval = 20
-label = IRAS 18162-2048 ALMAe${almae} PA=${paval}${deg}
+#label = IRAS 18162-2048 ALMAe${almae} PA=${paval}${deg}
 pvmap = ${results}/${source}_alma1_rotation.c-HCOOH_spw3.ra274.80040_dec-20.79193.PA${paval}.fits
 xlim = -0.48 0.48 arcsec
 hlines = 47.0 km/s
