--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig2.26.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig2.26.cfg
@@ -30,7 +30,8 @@ xticks_fmt = {x:.1f}
 yticks_fmt = {x:.0f}
 inverty = true
 ticks_color = w
-label = ${source} ALMAe${almae} PA=${paval}${deg}
+enumerate = false
+label = PA=${paval}${deg}
 label_position = 0.03 0.92
 vlines = 0 arcsec
 vlines_linestyle = :
@@ -49,7 +50,7 @@ source = IRAS_18182-1433
 alma = 3
 almae = 5
 paval = 10
-label = IRAS 18182-1433 ALMAe${almae} PA=${paval}${deg}
+#label = IRAS 18182-1433 ALMAe${almae} PA=${paval}${deg}
 pvmap = ${results}/${source}_alma3_rotation.CH3CN_K3.ra275.28802_dec-14.53017.PA${paval}.fits
 hlines = 61.12 km/s
 rms = 1.4 mJy/beam
@@ -114,7 +115,7 @@ source = IRAS_18182-1433
 alma = 3
 almae = 5
 paval = 100
-label = IRAS 18182-1433 ALMAe${almae} PA=${paval}${deg}
+#label = IRAS 18182-1433 ALMAe${almae} PA=${paval}${deg}
 pvmap = ${results}/${source}_alma3_rotation.CH3CN_K3.ra275.28802_dec-14.53017.PA${paval}.fits
 hlines = 61.12 km/s
 rms = 1.4 mJy/beam
