--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig2.27.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig2.27.cfg
@@ -30,7 +30,8 @@ xticks_fmt = {x:.1f}
 yticks_fmt = {x:.0f}
 inverty = true
 ticks_color = w
-label = ${source} ALMAe${almae} PA=${paval}${deg}
+enumerate = false
+label = PA=${paval}${deg}
 almae = ${alma}
 label_position = 0.03 0.92
 vlines = 0 arcsec
