--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig2.29.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig2.29.cfg
@@ -30,7 +30,8 @@ xticks_fmt = {x:.1f}
 yticks_fmt = {x:.0f}
 inverty = true
 ticks_color = w
-label = ${source} ALMAe${almae} PA=${paval}${deg}
+enumerate = false
+label = PA=${paval}${deg}
 label_position = 0.03 0.92
 vlines = 0 arcsec
 vlines_linestyle = :
@@ -49,7 +50,7 @@ source = NGC_6334_I_N
 alma = 1
 almae = 2
 paval = 310
-label = NGC 6334I(N) ALMAe${almae} PA=${paval}${deg}
+#label = NGC 6334I(N) ALMAe${almae} PA=${paval}${deg}
 pvmap = ${results}/${source}_alma1_rotation.CH3OH_spw0.ra260.22996_dec-35.75110.PA${paval}.fits
 hlines = -1.77 km/s
 rms = 1.7 mJy/beam
@@ -114,7 +115,7 @@ source = NGC_6334_I_N
 alma = 1
 almae = 2
 paval = 40
-label = NGC 6334I(N) ALMAe${almae} PA=${paval}${deg}
+#label = NGC 6334I(N) ALMAe${almae} PA=${paval}${deg}
 pvmap = ${results}/${source}_alma1_rotation.CH3OH_spw0.ra260.22996_dec-35.75110.PA${paval}.fits
 hlines = -1.77 km/s
 rms = 1.7 mJy/beam
