--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig2.1.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig2.1.cfg
@@ -30,7 +30,9 @@ xticks_fmt = {x:.1f}
 yticks_fmt = {x:.0f}
 inverty = true
 ticks_color = w
-label = ${source} ALMAe${almae} PA=${paval}${deg}
+enumerate = false
+#label = ${source} ALMAe${almae} PA=${paval}${deg}
+label = PA=${paval}${deg}
 label_position = 0.03 0.92
 vlines = 0 arcsec
 vlines_linestyle = :
