--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig2.21.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig2.21.cfg
@@ -30,7 +30,8 @@ xticks_fmt = {x:.1f}
 yticks_fmt = {x:.0f}
 inverty = true
 ticks_color = w
-label = ${source} ALMAe${almae} PA=${paval}${deg}
+enumerate = false
+label = PA=${paval}${deg}
 label_position = 0.03 0.92
 vlines = 0 arcsec
 vlines_linestyle = :
@@ -46,7 +47,7 @@ deg = $$^\circ$$
 [G35.20_alma1_pvmap_rot]
 loc = 0 0
 source = G35.20-0.74_N
-label =  G35.20-0.74 N ALMAe${almae} PA=${paval}${deg}
+#label =  G35.20-0.74 N ALMAe${almae} PA=${paval}${deg}
 alma = 1
 almae = 1
 paval = -10
@@ -112,7 +113,7 @@ model_info = 1
 [G35.20_alma1_pvmap_out]
 loc = 0 1
 source = G35.20-0.74_N
-label =  G35.20-0.74 N ALMAe${almae} PA=${paval}${deg}
+#label =  G35.20-0.74 N ALMAe${almae} PA=${paval}${deg}
 alma = 1
 almae = 1
 paval = 80
