--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig2.24.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig2.24.cfg
@@ -30,7 +30,8 @@ xticks_fmt = {x:.1f}
 yticks_fmt = {x:.0f}
 inverty = true
 ticks_color = w
-label = ${source} ALMAe${almae} PA=${paval}${deg}
+enumerate = false
+label = PA=${paval}${deg}
 label_position = 0.03 0.92
 vlines = 0 arcsec
 vlines_linestyle = :
@@ -49,7 +50,7 @@ source = IRAS_180891732
 alma = 3
 almae = 2
 paval = 315
-label = IRAS 18089-1732 ALMAe${almae} PA=${paval}${deg}
+#label = IRAS 18089-1732 ALMAe${almae} PA=${paval}${deg}
 pvmap = ${results}/${source}_alma3_rotation.CH3CN_K3.ra272.96417_dec-17.52498.PA${paval}.fits
 hlines = 33.02 km/s
 rms = 1.6 mJy/beam
@@ -114,7 +115,7 @@ source = IRAS_180891732
 alma = 3
 almae = 2
 paval = 45
-label = IRAS 18089-1732 ALMAe${almae} PA=${paval}${deg}
+#label = IRAS 18089-1732 ALMAe${almae} PA=${paval}${deg}
 pvmap = ${results}/${source}_alma3_rotation.CH3CN_K3.ra272.96417_dec-17.52498.PA${paval}.fits
 hlines = 33.02 km/s
 rms = 1.6 mJy/beam
