--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig2.30.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig2.30.cfg
@@ -30,7 +30,8 @@ xticks_fmt = {x:.1f}
 yticks_fmt = {x:.0f}
 inverty = true
 ticks_color = w
-label = ${source} ALMAe${almae} PA=${paval}${deg}
+enumerate = false
+label = PA=${paval}${deg}
 label_position = 0.03 0.92
 vlines = 0 arcsec
 vlines_linestyle = :
@@ -49,7 +50,7 @@ source = NGC_6334_I_N
 alma = 6
 almae = 4
 paval = 130
-label = NGC 6334I(N) ALMAe${almae} PA=${paval}${deg}
+#label = NGC 6334I(N) ALMAe${almae} PA=${paval}${deg}
 pvmap = ${results}/${source}_alma6_rotation.CH3CN_K3.ra260.22758_dec-35.75241.PA${paval}.fits
 hlines = -7.2 km/s
 rms = 1.7 mJy/beam
@@ -114,7 +115,7 @@ source = NGC_6334_I_N
 alma = 6
 almae = 4
 paval = 220
-label = NGC 6334I(N) ALMAe${almae} PA=${paval}${deg}
+#label = NGC 6334I(N) ALMAe${almae} PA=${paval}${deg}
 pvmap = ${results}/${source}_alma6_rotation.CH3CN_K3.ra260.22758_dec-35.75241.PA${paval}.fits
 hlines = -7.2 km/s
 rms = 1.7 mJy/beam
