Improve pv maps

--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig2.1.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig2.1.cfg
@@ -3,7 +3,7 @@ ncols = 2
 nrows = 1
 sharex = false
 sharey = false
-styles = maps inferno aspect_auto thick_border
+styles = maps inferno aspect_auto 
 #styles = maps lipari aspect_auto thick_border
 vertical_cbar = false
 horizontal_cbar = true
@@ -44,6 +44,7 @@ vmin = 0. mJy/beam
 basedir = ..
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma${alma}_pvmaps
 deg = $$^\circ$$
+class = deepskyblue
 
 [G10_alma1a_pvmap_rot]
 loc = 0 0
@@ -56,6 +57,10 @@ hlines = 0.851 km/s
 rms = 1.6 mJy/beam
 vmax = 32 mJy/beam
 spine_color = deepskyblue
+label = PA=${paval}${deg} $$\alpha = 1.2$$
+label_alpha = 0.8
+label_edgecolor = ${class}
+label_font_color = ${class}
 
 [G10.62-0.38_alma1a_pvedge]
 loc = 0 0
@@ -97,7 +102,8 @@ xrange = -0.9950000000000795 0.9950000000000795 arcsec
 yunit = km/s
 sampling = 500
 linestyle = -
-color = #adacac
+#color = #adacac
+color = ${class}
 model_amplitude = -35.68181659376357
 model_x_0 = 0.020202020202020204
 model_alpha = 1.1449003000946247
