Improve pv map plot

--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig2.1.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig2.1.cfg
@@ -36,15 +36,20 @@ label = PA=${paval}${deg}
 label_position = 0.03 0.92
 vlines = 0 arcsec
 vlines_linestyle = :
-vlines_color = #35ff2c
+#vlines_color = #35ff2c
+vlines_color = #adacac
 hlines_linestyle = --
-hlines_color = #35ff2c
+#hlines_color = #35ff2c
+hlines_color = #adacac
 self_contours = true
 vmin = 0. mJy/beam
 basedir = ..
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma${alma}_pvmaps
 deg = $$^\circ$$
 class = deepskyblue
+label_alpha = 0.9
+label_edgecolor = ${class}
+label_font_color = ${class}
 
 [G10_alma1a_pvmap_rot]
 loc = 0 0
@@ -56,11 +61,8 @@ pvmap = ${results}/${source}_alma${alma}_rotation.CH3CN_K3.ra272.61920_dec-19.93
 hlines = 0.851 km/s
 rms = 1.6 mJy/beam
 vmax = 32 mJy/beam
-spine_color = deepskyblue
+#spine_color = deepskyblue
 label = PA=${paval}${deg} $$\alpha = 1.2$$
-label_alpha = 0.8
-label_edgecolor = ${class}
-label_font_color = ${class}
 
 [G10.62-0.38_alma1a_pvedge]
 loc = 0 0
@@ -127,7 +129,8 @@ pvmap = ${results}/${source}_alma${alma}_rotation.CH3CN_K3.ra272.61920_dec-19.93
 hlines = 0.851 km/s
 rms = 1.6 mJy/beam
 vmax = 32 mJy/beam
-spine_color = red
+label = PA=${paval}${deg} - Infall
+#spine_color = red
 
 [G10.62-0.38_alma1a_infall]
 loc = 0 1
