--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig2.1.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig2.1.cfg
@@ -3,7 +3,7 @@ ncols = 2
 nrows = 1
 sharex = false
 sharey = false
-styles = maps inferno aspect_auto 
+styles = maps lipari_r aspect_auto 
 #styles = maps lipari aspect_auto thick_border
 vertical_cbar = false
 horizontal_cbar = true
@@ -24,8 +24,6 @@ name = Intensity
 unit = mJy/beam
 stretch = linear
 nsigma = 3
-contour_linewidth = 0.5
-contour_stretch = log
 xticks_fmt = {x:.1f}
 yticks_fmt = {x:.0f}
 inverty = true
@@ -42,11 +40,14 @@ hlines_linestyle = --
 #hlines_color = #35ff2c
 hlines_color = #adacac
 self_contours = true
+contour_linewidth = 0.5
+contour_stretch = log
+contour_colors = #494a49
 vmin = 0. mJy/beam
 basedir = ..
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma${alma}_pvmaps
 deg = $$^\circ$$
-class = deepskyblue
+class = #0c99ff
 label_alpha = 0.9
 label_edgecolor = ${class}
 label_font_color = ${class}
@@ -68,7 +69,8 @@ label = PA=${paval}${deg} $$\alpha = 1.2$$
 loc = 0 0
 structured_array = ../results/G10.62-0.38/c5c8/per_hot_core/alma1a_pvmaps/G10.62-0.38_alma1a_rotation.CH3CN_K3.ra272.61920_dec-19.93041.PA0.edge.dat
 marker = o
-color = #46eff2
+#color = #46eff2
+color = ${contour_colors}
 linestyle = none
 plot_keys = OFFSET, VRAD
 legend = Edge
