--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig2.1.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig2.1.cfg
@@ -27,7 +27,7 @@ nsigma = 3
 xticks_fmt = {x:.1f}
 yticks_fmt = {x:.0f}
 inverty = true
-ticks_color = w
+ticks_color = k
 enumerate = false
 #label = ${source} ALMAe${almae} PA=${paval}${deg}
 label = PA=${paval}${deg}
@@ -47,7 +47,7 @@ vmin = 0. mJy/beam
 basedir = ..
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma${alma}_pvmaps
 deg = $$^\circ$$
-class = #0c99ff
+class = #2f52f0
 label_alpha = 0.9
 label_edgecolor = ${class}
 label_font_color = ${class}
@@ -82,7 +82,8 @@ xrange = -0.9950000000000795 0.9950000000000795 arcsec
 yunit = km/s
 sampling = 500
 linestyle = --
-color = #eb5252
+color = #ef2d56
+#color = #eb5252
 legend = Keplerian
 model_mass = 15.839053466606627 solMass
 model_amplitude = -11.853803492250195
